--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-    <camunda.version>7.15.0</camunda.version>
+    <camunda.version>7.16.0</camunda.version>
+    <spring-boot.version>2.6.3</spring-boot.version>
   </properties>
 
   <dependencyManagement>
@@ -18,7 +19,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.4.3</version>
+        <version>${spring-boot.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -62,7 +63,7 @@
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-ui</artifactId>
-      <version>1.5.10</version>
+      <version>1.6.5</version>
     </dependency>
 
     <dependency>
@@ -87,6 +88,13 @@
       <version>${camunda.version}</version>
     </dependency>
 
+    <!-- for jdk > v9 -->
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>2.3.5</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -94,7 +102,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>2.4.3</version>
+        <version>${spring-boot.version}</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
