--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,5 +1,6 @@
 spring.datasource.url: jdbc:h2:file:./camunda-h2-database;DB_CLOSE_ON_EXIT=FALSE
 
-camunda.bpm.admin-user:
-  id: admin
-  password: admin
+camunda:
+  bpm:
+    job-execution:
+      enabled: false
